--- a/.github/workflows/makefile.yml
+++ b/.github/workflows/makefile.yml
@@ -15,7 +15,8 @@ jobs:
     - uses: actions/checkout@v3
     
     - name: configure
-      run: ./configure
+      run: sudo apt-get install build-essential curl git lib32stdc++-9-dev \
+           libc6-dev-i386 nodejs npm python3-dev python3-pip
       
     - name: Install dependencies
       run: make
