--- a/.github/workflows/makefile.yml
+++ b/.github/workflows/makefile.yml
@@ -10,10 +10,20 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
+    
+    steps:
+  - uses: actions/checkout@v2
 
+  - name: Ndk
+  - uses: nttld/setup-ndk@v1
+    with:
+      ndk-version: r21e
+  
     steps:
     - uses: actions/checkout@v3
     
+    
+      
     
     - name: Install dependencies
       run: make core-android-arm64
